tests/errors/throw.js
export function attempt$shouldThrow$(shouldThrow) {
  if (shouldThrow) {
    throw 0;
  }
}